--- a/primary.ini
+++ b/primary.ini
@@ -1,8 +1,9 @@
 [global/wm]
-margin-bottom = 0
+margin-bottom = 10
 margin-top = 0
 
-include-file = ~/.config/polybar/colors
+include-file = ~/Documents/projects/polybar/colors.ini
+include-file = ~/Documents/projects/polybar/modules.ini
 
 
 [bar/primary]
@@ -13,29 +14,34 @@ override-redirect = false
 bottom = false
 fixed-center = true
 
-width = 100%
-height = 35
-offset-x = 0
+width = 98%
+height = 36
+offset-x = 1%
 offset-y = 0
 
-background = ${color.BACKGROUND}
-foreground = ${color.FOREGROUND}
+background = ${color.BG}
+foreground = ${color.FG}
 
-line-size = 2
-line-color = ${color.BLUE}
-border-size = 4
-border-color = ${color.BACKGROUND}
+line-size = 4
+line-color = ${color.AC}
 
-padding = 1
-module-margin-left = 1
-module-margin-right = 1
+border-top-size = 0
+border-color = ${color.AC}
 
-font-0 = "Inter Medium:size=12;3"
-font-1 = "Iosevka Nerd Font:size=12;3"
+padding = 2
 
-modules-left = bspwm mod
-modules-center = polywins
-modules-right =  date
+module-margin-left = 0
+module-margin-right = 0
+
+font-0 = "Inter Medium:size=10;3"
+font-1 = "Inter Medium:size=12;3"
+font-2 = "MesloLGL Nerd Font:size=10;3"
+font-3 = "MesloLGL Nerd Font:size=12;3"
+font-4 = "MesloLGL Nerd Font:size=15;3"
+
+modules-left = menu sep 
+modules-center = bspwm 
+modules-right = sep sysmenu
 
 separator =
 spacing = 0
@@ -45,14 +51,9 @@ dim-value = 1.0
 wm-name = bspwm
 locale = 
 
-tray-position = right
+tray-position = none
 tray-detached = false
 tray-maxsize = 16
-tray-background = ${color.BACKGROUND}
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 0
-tray-scale = 1.0
 
 wm-restack = bspwm
 
@@ -76,7 +77,7 @@ fuzzy-match = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; Note that the label needs to correspond with the bspwm workspace name
-ws-icon-0 = ;
+ws-icon-0 = ; 
 ws-icon-1 = ;
 ws-icon-2 = ;
 ws-icon-3 = ;
@@ -89,13 +90,13 @@ ws-icon-9 = :
 ws-icon-default = 
 
 format = <label-state>
-format-font = 1
+format-font = 3
 label-monitor = %name%
 
 label-focused = %icon%
-label-focused-foreground = ${color.FOREGROUND}
-label-focused-background = #c5c5c5
-label-focused-padding = 2
+label-focused-foreground = ${color.FG}
+label-focused-background = ${color.BLUE}
+label-focused-padding = 1
 
 label-occupied = %icon%
 label-occupied-foreground = #38495E 
@@ -117,4 +118,5 @@ label-empty-padding = 1
 ;label-separator = " "
 label-separator-padding = 0
 ;label-separator-foreground = ${color.YELLOW}
+
 
